# archinstall-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO_SUMMARY.md  archinstall-rs.config.toml  boot.sh  run-tui.sh
.cursor/commands/: announce-branch.md  announce-version.md  check-pr.md  git-staged-msg.md  issue-new.md  pr-update.md  pr.md  readme-update.md  release-new.md  summary.md  wiki-update.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: release.yml
Documents/: CONFIGURATION.md  DEVELOPMENT.md  EFISTUB_AUDIT.md  EFISTUB_ISSUES.md  EFISTUB_VM_CHECKLIST.md  FEATURES.md  HOW_TO.md  INSTALL.md  RELEASE_v0.2.1.md  RELEASE_v0.2.2.md  RELEASE_v0.2.3.md  ROADMAP.md  STATUS.md  TROUBLESHOOTING.md  USAGE.md  arch_manual.md  bootloader.rs  release_v0.1.0.md  release_v0.2.0.md
Documents/Plans/: BOOT_AND_KERNEL_DELIVERY_PLAN.md  STORAGE_LAYOUT_PLAN.md
assets/iso/: boot.sh
assets/limine/: install-limine.sh  limine.conf  limine.conf.example
configs/examples/: locale-br-gnome.toml  locale-ch-kde.toml  locale-fr-gnome.toml  locale-jp-kde.toml  manifest.toml  popular-gnome-de.toml  popular-hyprland-us.toml  popular-kde-plasma-us.toml  popular-xfce4-gb.toml
scripts/: install-from-release.sh.in  release.sh
src/: lib.rs  main.rs  runner.rs
src/app/: abort.rs  additional_packages.rs  audio.rs  disks.rs  (+16 more)
tests/: limine_conf_generation.rs  limine_plan_handles_empty_parent.rs  limine_plan_usb_path.rs  limine_plan_writes_config.rs  logic.rs
(+172 files in other folders)
