[package]
name = "archinstall-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
