[package]
name = "archinstall-rs"
version = "0.2.3"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.7"
sha2 = "0.10"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
